<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/backdrop_and_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_movie_title_details"
                android:layout_width="@dimen/margin_none"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_weight="9"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="@dimen/text_movie_title"
                tools:text="@string/movie_title"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_none"
            android:layout_weight=".5">

            <LinearLayout
                android:layout_width="@dimen/margin_none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="@dimen/margin_small"
                    android:text="@string/details_review"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.35"
                    android:textColor="@android:color/black"
                    tools:text="@string/ten_outof_ten"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_none"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="@dimen/margin_small"
                    android:text="@string/details_released"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    tools:text="@string/random_date"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_extra_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ScrollView
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="@dimen/image_overview_height"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="@dimen/text_movie_overview"
                        tools:text="@string/overview_tester"/>

                </ScrollView>

                <ImageView
                    android:id="@+id/iv_movie_poster_details"
                    android:layout_width="@dimen/margin_none"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    android:contentDescription="@string/movie_poster"
                    android:paddingStart="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_small"
                    android:paddingTop="@dimen/margin_small"
                    tools:src="@drawable/poster_example"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_extra_small"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorPrimaryDark"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="228dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/trailer_list_item"/>

                <TextView
                    android:id="@+id/tv_no_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_extra_large"
                    android:text="@string/no_trailers_yet"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <ProgressBar
                    android:id="@+id/pb_trailers"
                    android:layout_width="@dimen/margin_xxx_large"
                    android:layout_height="@dimen/margin_xxx_large"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_extra_small"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorPrimaryDark"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="228dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/review_list_item"/>

                <TextView
                    android:id="@+id/tv_no_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_extra_large"
                    android:text="@string/no_reviews_yet"
                    android:textSize="20sp"
                    android:visibility="invisible"/>

                <ProgressBar
                    android:id="@+id/pb_reviews"
                    android:layout_width="@dimen/margin_xxx_large"
                    android:layout_height="@dimen/margin_xxx_large"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_extra_small"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>